// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderSubmodulesSurface structural snapshot — empty 1`] = `
<Box
  borderColor="cyan"
  borderStyle="round"
  flexDirection="column"
  flexShrink={0}
  paddingX={1}
  width={120}
>
  <Box
    justifyContent="space-between"
  >
    <Text
      bold={true}
    >
      Submodules *
    </Text>
    <Text
      dimColor={true}
    >
      0/0 submodules
    </Text>
  </Box>
  <Text
    dimColor={true}
  >
    No submodules registered. Add one with \`git submodule add &lt;url&gt; &lt;path&gt;\` from the shell.
  </Text>
</Box>
`;

exports[`renderSubmodulesSurface structural snapshot — populated 1`] = `
<Box
  borderColor="cyan"
  borderStyle="round"
  flexDirection="column"
  flexShrink={0}
  paddingX={1}
  width={120}
>
  <Box
    justifyContent="space-between"
  >
    <Text
      bold={true}
    >
      Submodules *
    </Text>
    <Text
      dimColor={true}
    >
      1/1 submodules
    </Text>
  </Box>
  <Text
    bold={true}
    dimColor={false}
  >
    &gt; vendor/lib vendor/lib abc1234 clean
  </Text>
</Box>
`;
